# SOFA_Custom_CollisionModels

./: test_cubes_scytherModels.py
ScytherPlugin/: CMakeLists.txt  ScytherPluginConfig.cmake.in  initScytherPlugin.cpp  scyther.h  scyther.h.in
ScytherPlugin/scenes/: test_cubes.scn
ScytherPlugin/src/: ScytherCubeModel.cpp  ScytherCubeModel.h  ScytherDetection.cpp  ScytherDetection.h  ScytherDetection.inl  ScytherIntersection.cpp  ScytherIntersection.h  ScytherPointModel.cpp  ScytherPointModel.h  ScytherPointModel.inl  ScytherTriangleModel.cpp  ScytherTriangleModel.h
